--- a/assets/css/index.css
+++ b/assets/css/index.css
@@ -17,6 +17,7 @@
  */
 
 @import url("reset.css");
+@import url("fonts.css");
 @import url("theme.css");
 @import url("base.css");
 @import url("layout.css");
