--- a/assets/css/layout.css
+++ b/assets/css/layout.css
@@ -29,6 +29,11 @@ h1, h2, h3, h4, h5, h6 {
     text-align: left !important;
 }
 
+/* Excepción para el título de Projects Hero */
+h1.title-projects-hero {
+    text-align: center !important;
+}
+
 /* --------------------------------------------------------------------------
    5. Hero Section
    -------------------------------------------------------------------------- */
@@ -131,20 +136,6 @@ h1, h2, h3, h4, h5, h6 {
 .hero-content {
 	position: relative;
 	z-index: 1;
-}
-
-.hero-title {
-    font-family: "BBH Sans Bartle", sans-serif !important;
-    font-weight: 400 !important;
-    font-size: var(--text-hero);
-    margin-bottom: var(--space-sm);
-    letter-spacing: -0.02em;
-    max-width: 50%;
-    text-align: left;
-    word-spacing: 9999px;
-    line-height: 1.2;
-    margin: var(--space-2xl) 0 var(--space-lg) var(--space-xl);
-    padding: var(--space-lg) 0;
 }
 
 .hero-subtitle {
